--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "engines" : { 
+    "npm" : ">=8.0.0 <9.0.0",
+    "node" : ">=16.0.0 <18.0.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
