--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 NODE_ENV=development
-DATABASE=mongodb+srv://alumni:<PASSWORD>@cluster0.sspflrd.mongodb.net/alumni?retryWrites=true&w=majority
-DATABASE_PASSWORD= vKJAa8361kCeXday
+DATABASE=mongodb+srv://ric:ric@cluster0.miau4pq.mongodb.net/ric?retryWrites=true&w=majority
 
-JWT_SECRET=&Alumni$123
+
+JWT_SECRET=&ric$123
